--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [server]
-homeserver ansible_host=192.168.1.50 ansible_user=ubuntu
+homeserver ansible_host=192.168.0.18 ansible_user=familledealmeida
