--- a/srv/docker/traefik/docker-compose.yml
+++ b/srv/docker/traefik/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "traefik.http.routers.traefik.rule=Host(`traefik.de-almeida.freeboxos.free.fr`)"
       - "traefik.http.routers.traefik.entrypoints=web"
       - "traefik.http.routers.traefik.service=api@internal"
-      - "traefik.http.middlewares.auth.basicauth.users=admin:$apr1$xxxxx"
+      - "traefik.http.middlewares.auth.basicauth.users=admin:$apr1$DbgjbZFw$TgV42Nt0U53GtWU33Q6kH/"
       - "traefik.http.routers.traefik.middlewares=auth"
 
 
@@ -17,12 +17,13 @@ services:
       - "--api.dashboard=true"
       - "--api.insecure=false" 
       - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.websecure.address=:443"
       - "--entrypoints.web.address=:80"
 
     ports:
       - "80:80"
       - "443:443"
-      - "8080:8080"
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
