--- a/srv/docker/traefik/docker-compose.yml
+++ b/srv/docker/traefik/docker-compose.yml
@@ -1,29 +1,29 @@
+version: "3.9"
+
 services:
   traefik:
     image: traefik:v3.6
     container_name: traefik
     restart: unless-stopped
 
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.traefik.rule=Host(`traefik.de-almeida.freeboxos.free.fr`)"
-      - "traefik.http.routers.traefik.entrypoints=web"
-      - "traefik.http.routers.traefik.service=api@internal"
-      - "traefik.http.middlewares.auth.basicauth.users=admin:$apr1$DbgjbZFw$TgV42Nt0U53GtWU33Q6kH/"
-      - "traefik.http.routers.traefik.middlewares=auth"
-
-
-    command:
-      - "--api.dashboard=true"
-      - "--api.insecure=false" 
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.websecure.address=:443"
-      - "--entrypoints.web.address=:80"
+    env_file:
+      - .env
 
     ports:
       - "80:80"
       - "443:443"
 
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./traefik.yml:/traefik.yml:ro
+      - ./acme.json:/acme.json
+
+    command:
+      - "--configFile=/traefik.yml"
+
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.rule=Host(`traefik.${DOMAIN}`)"
+      - "traefik.http.routers.traefik.entrypoints=websecure"
+      - "traefik.http.routers.traefik.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.traefik.service=api@internal"
