--- a/srv/docker/immich/docker-compose.yml
+++ b/srv/docker/immich/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./library:/usr/src/app/upload
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.immich.rule=Host(`photos.mondomaine.fr`)"
+      - "traefik.http.routers.immich.rule=Host(`immich.de-almeida.freeboxos.fr`)"
       - "traefik.http.routers.immich.entrypoints=websecure"
       - "traefik.http.routers.immich.tls.certresolver=le"
     networks:
