--- a/srv/docker/traefik/docker-compose.yml
+++ b/srv/docker/traefik/docker-compose.yml
@@ -27,3 +27,10 @@ services:
       - "traefik.http.routers.traefik.entrypoints=websecure"
       - "traefik.http.routers.traefik.tls.certresolver=letsencrypt"
       - "traefik.http.routers.traefik.service=api@internal"
+
+    networks:
+      - proxy
+
+networks:
+  proxy:
+    external: true
