enable immich setup

--- a/srv/docker/immich/.env
+++ b/srv/docker/immich/.env
@@ -21,3 +21,7 @@ IMMICH_MACHINE_LEARNING_URL=http://immich-machine-learning:3003
 
 # === Sécurité ===
 JWT_SECRET=Cemotesttressecret
+
+# === Domaine ===
+DOMAIN=dealmeida.cloud
+EMALI=symeon.dealmeida@gmail.com
