--- a/srv/docker/immich/docker-compose.yml
+++ b/srv/docker/immich/docker-compose.yml
@@ -3,17 +3,20 @@ version: "3.9"
 services:
   immich-server:
     image: ghcr.io/immich-app/immich-server:release
+    container_name: immich-server
     restart: unless-stopped
     env_file: .env
     volumes:
       - ./library:/usr/src/app/upload
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.immich.rule=Host(`immich.de-almeida.freeboxos.fr`)"
+      - "traefik.http.routers.immich.rule=Host(`immich.${DOMAIN}`)"
       - "traefik.http.routers.immich.entrypoints=websecure"
-      - "traefik.http.routers.immich.tls.certresolver=le"
-    networks:
-      - proxy
+      - "traefik.http.routers.immich.tls.certresolver=letsencrypt"
+      - "traefik.http.services.immich.loadbalancer.server.port=3001"
+  depends_on:
+      - immich-postgres
+      - redis
 
   immich-postgres:
     image: postgres:16
@@ -21,17 +24,33 @@ services:
     environment:
       POSTGRES_DB: immich
       POSTGRES_USER: immich
-      POSTGRES_PASSWORD: strongpassword
+      POSTGRES_PASSWORD: postgres
     volumes:
       - postgres:/var/lib/postgresql/data
 
+  immich-microservices:
+    image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION}
+    container_name: immich_microservices
+    restart: unless-stopped
+    env_file:
+      - .env
+    volumes:
+      - ./library:/usr/src/app/upload
+    command: ["start.sh", "microservices"]
+    depends_on:
+      - redis
+      - database
+
+  immich-machine-learning:
+    image: ghcr.io/immich-app/immich-machine-learning:${IMMICH_VERSION}
+    container_name: immich_ml
+    restart: unless-stopped
+
   redis:
     image: redis:7
+    container_name: immich-redis
     restart: unless-stopped
 
 volumes:
   immich-postgres:
 
-networks:
-  proxy:
-    external: true
