--- a/srv/docker/immich/docker-compose.yml
+++ b/srv/docker/immich/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "traefik.http.routers.immich.entrypoints=websecure"
       - "traefik.http.routers.immich.tls.certresolver=letsencrypt"
       - "traefik.http.services.immich.loadbalancer.server.port=3001"
-  depends_on:
+    depends_on:
       - immich-postgres
       - redis
 
@@ -26,7 +26,7 @@ services:
       POSTGRES_USER: immich
       POSTGRES_PASSWORD: postgres
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - immich-postgres:/var/lib/postgresql/data
 
   immich-microservices:
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION}
