update immich db

--- a/srv/docker/immich/.env
+++ b/srv/docker/immich/.env
@@ -2,7 +2,7 @@
 IMMICH_VERSION=release
 
 # === Database ===
-DB_HOST=postgres
+DB_HOST=immich-postgres
 DB_PORT=5432
 DB_USERNAME=immich
 DB_PASSWORD=postgres
