--- a/srv/docker/immich/.env
+++ b/srv/docker/immich/.env
@@ -6,7 +6,7 @@ DB_HOST=immich-postgres
 DB_PORT=5432
 DB_USERNAME=immich
 DB_PASSWORD=postgres
-DB_DATABASE_NAME=immich
+DB_DATABASE_NAME=immich-postgres
 
 # === Redis ===
 REDIS_HOST=redis
