--- a/srv/docker/immich/docker-compose.yml
+++ b/srv/docker/immich/docker-compose.yml
@@ -15,8 +15,11 @@ services:
       - "traefik.http.routers.immich.tls.certresolver=letsencrypt"
       - "traefik.http.services.immich.loadbalancer.server.port=3001"
     depends_on:
-      - immich-postgres
-      - redis
+      immich-postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
+
 
   immich-postgres:
     image: postgres:16
@@ -27,6 +30,11 @@ services:
       POSTGRES_PASSWORD: postgres
     volumes:
       - immich-postgres:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U immich"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   immich-microservices:
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION}
