--- a/srv/docker/immich/docker-compose.yml
+++ b/srv/docker/immich/docker-compose.yml
@@ -45,9 +45,12 @@ services:
     volumes:
       - ./library:/usr/src/app/upload
     command: ["start.sh", "microservices"]
-    depends_on:
-      - redis
-      - immich-postgres
+    depends_on:  
+      immich-postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
+
 
   immich-machine-learning:
     image: ghcr.io/immich-app/immich-machine-learning:${IMMICH_VERSION}
