--- a/srv/docker/immich/docker-compose.yml
+++ b/srv/docker/immich/docker-compose.yml
@@ -22,7 +22,7 @@ services:
 
 
   immich-postgres:
-    image: postgres:16
+    image: ankane/pgvector:postgres16
     restart: unless-stopped
     environment:
       POSTGRES_DB: immich
@@ -32,7 +32,7 @@ services:
       - immich-postgres:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U immich"]
-      interval: 10s
+      interval: 5s
       timeout: 5s
       retries: 5
 
