--- a/srv/docker/immich/docker-compose.yml
+++ b/srv/docker/immich/docker-compose.yml
@@ -22,12 +22,15 @@ services:
 
 
   immich-postgres:
-    image: ankane/pgvector:postgres16
+    image: ghcr.io/immich-app/postgres:latest
+    container_name: immich-postgres
     restart: unless-stopped
     environment:
       POSTGRES_DB: immich
       POSTGRES_USER: immich
       POSTGRES_PASSWORD: postgres
+      POSTGRES_INITDB_ARGS: '--data-checksums'
+    shm_size: 128mb
     volumes:
       - immich-postgres:/var/lib/postgresql/data
     healthcheck:
