--- a/srv/docker/nextcloud/docker-compose.yml
+++ b/srv/docker/nextcloud/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./data:/var/www/html
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.nextcloud.rule=Host(`cloud.mondomaine.fr`)"
+      - "traefik.http.routers.nextcloud.rule=Host(`nextcloud.dealmeida.cloud`)"
       - "traefik.http.routers.nextcloud.entrypoints=websecure"
       - "traefik.http.routers.nextcloud.tls.certresolver=le"
     networks:
