--- a/srv/docker/traefik/traefik.yml
+++ b/srv/docker/traefik/traefik.yml
@@ -13,6 +13,11 @@ entryPoints:
 
   websecure:
     address: ":443"
+    transport:
+      respondingTimeouts:
+        readTimeout: 600s
+        idleTimeout: 600s
+        writeTimeout: 600s
 
 certificatesResolvers:
   letsencrypt:
