test setup immich

--- a/srv/docker/immich/.env
+++ b/srv/docker/immich/.env
@@ -25,3 +25,6 @@ JWT_SECRET=Cemotesttressecret
 # === Domaine ===
 DOMAIN=dealmeida.cloud
 EMAIL=symeon.dealmeida@gmail.com
+
+IMMICH_SERVER_URL=https://immich.dealmeida.cloud
+IMMICH_WEB_URL=https://immich.dealmeida.cloud
