--- a/srv/docker/traefik/traefik.yml
+++ b/srv/docker/traefik/traefik.yml
@@ -15,9 +15,7 @@ entryPoints:
     address: ":443"
     transport:
       respondingTimeouts:
-        readTimeout: 600s
-        idleTimeout: 600s
-        writeTimeout: 600s
+        readTimeout: "0s"
 
 certificatesResolvers:
   letsencrypt:
