--- a/srv/docker/nextcloud/docker-compose.yml
+++ b/srv/docker/nextcloud/docker-compose.yml
@@ -12,6 +12,11 @@ services:
       - "traefik.http.routers.nextcloud.rule=Host(`nextcloud.dealmeida.cloud`)"
       - "traefik.http.routers.nextcloud.entrypoints=websecure"
       - "traefik.http.routers.nextcloud.tls.certresolver=le"
+      - "traefik.http.services.nextcloud.loadbalancer.server.port=8080"
+      - "traefik.docker.network=traefik-network"
+    depends_on:
+      - nextcloud-postgres
+      - redis
     networks:
       - traefik-network
 
