--- a/srv/docker/nextcloud/docker-compose.yml
+++ b/srv/docker/nextcloud/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       POSTGRES_USER: nc
       POSTGRES_PASSWORD: strongpassword
     volumes:
-      - nextcloud-postgres::/var/lib/postgresql/data
+      - nextcloud-postgres:/var/lib/postgresql/data
 
   redis:
     image: redis:7
