--- a/srv/docker/nextcloud/docker-compose.yml
+++ b/srv/docker/nextcloud/docker-compose.yml
@@ -13,12 +13,12 @@ services:
       - "traefik.http.routers.nextcloud.entrypoints=websecure"
       - "traefik.http.routers.nextcloud.tls.certresolver=le"
       - "traefik.http.services.nextcloud.loadbalancer.server.port=8080"
-      - "traefik.docker.network=traefik-network"
+      - "traefik.docker.network=traefik-net"
     depends_on:
       - nextcloud-postgres
       - redis
     networks:
-      - traefik-network
+      - traefik-net
 
   nextcloud-postgres:
     image: postgres:16
@@ -26,7 +26,7 @@ services:
     environment:
       POSTGRES_DB: nextcloud
       POSTGRES_USER: nc
-      POSTGRES_PASSWORD: strongpassword
+      POSTGRES_PASSWORD: postgres
     volumes:
       - nextcloud-postgres:/var/lib/postgresql/data
 
@@ -38,5 +38,5 @@ volumes:
   nextcloud-postgres:
 
 networks:
-  traefik-network:
+  traefik-net:
     external: true
