--- a/srv/docker/nextcloud/.env
+++ b/srv/docker/nextcloud/.env
@@ -4,7 +4,7 @@ NEXTCLOUD_ADMIN_USER=admin
 NEXTCLOUD_ADMIN_PASSWORD=admin
 
 # === Database ===
-POSTGRES_HOST=postgres
+POSTGRES_HOST=nextcloud-postgres
 POSTGRES_DB=nextcloud
 POSTGRES_USER=nc
 POSTGRES_PASSWORD=postgres
