--- a/srv/docker/nextcloud/docker-compose.yml
+++ b/srv/docker/nextcloud/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.9"
 services:
   nextcloud:
     image: nextcloud:29
+    container_name: nextcloud
     restart: unless-stopped
     env_file: .env
     volumes:
@@ -23,8 +24,10 @@ services:
 
   nextcloud-postgres:
     image: postgres:16
+    container_name: nextcloud-postgres
     restart: unless-stopped
     environment:
+      POSTGRES_HOST: nextcloud-postgres
       POSTGRES_DB: nextcloud
       POSTGRES_USER: nc
       POSTGRES_PASSWORD: postgres
@@ -35,6 +38,7 @@ services:
 
   redis:
     image: redis:7
+    container_name: nextcloud-redis
     restart: unless-stopped
     networks:
       - nextcloud-net
