--- a/srv/docker/traefik/traefik.yml
+++ b/srv/docker/traefik/traefik.yml
@@ -26,6 +26,7 @@ certificatesResolvers:
       storage: /acme.json
       httpChallenge:
         entryPoint: web
+      caserver: https://acme-staging-v02.api.letsencrypt.org/directory
 
 providers:
   docker:
