fix traefik yml

--- a/srv/docker/traefik/docker-compose.yml
+++ b/srv/docker/traefik/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /srv/data/traefik/traefik.yml:/traefik.yml:ro
+      - ./traefik.yml:/traefik.yml:ro
       - /srv/data/traefik/acme.json:/acme.json
 
     command:
