Add restic backup scripts

--- a/srv/docker/traefik/traefik.yml
+++ b/srv/docker/traefik/traefik.yml
@@ -20,16 +20,16 @@ entryPoints:
         writeTimeout: 600s
 
 certificatesResolvers:
-  letsencrypt:
-    acme:
-      email: symeon.dealmeida@gmail.com
-      storage: /acme.json
-      httpChallenge:
-        entryPoint: web
+  #letsencrypt:
+  #  acme:
+  #    email: symeon.dealmeida@gmail.com
+  #    storage: /acme.json
+  #    httpChallenge:
+  #      entryPoint: web
   letsencrypt-staging:
     acme:
       email: symeon.dealmeida@gmail.com
-      storage: ./staging/acme.json
+      storage: /acme.json
       httpChallenge:
         entryPoint: web
       caServer: https://acme-staging-v02.api.letsencrypt.org/directory
