--- a/srv/docker/nextcloud/.env
+++ b/srv/docker/nextcloud/.env
@@ -1,5 +1,5 @@
 # === Nextcloud ===
-NEXTCLOUD_TRUSTED_DOMAINS=familledealmeida/duckdns.org
+NEXTCLOUD_TRUSTED_DOMAINS=nextcloud.dealmeida.cloud
 NEXTCLOUD_ADMIN_USER=admin
 NEXTCLOUD_ADMIN_PASSWORD=admin
 
