--- a/srv/docker/immich/docker-compose.yml
+++ b/srv/docker/immich/docker-compose.yml
@@ -3,15 +3,13 @@ version: "3.9"
 services:
   immich-server:
     image: ghcr.io/immich-app/immich-server:release
-    deploy:
-      resources:
-        limits:
-          memory: 4g
-          cpus: 4
     command: ["start.sh", "immich"]
     container_name: immich-server
     restart: unless-stopped
     env_file: .env
+    mem_limit: 4g
+    mem_reservation: 2g
+    cpus: 2.5
     volumes:
       - /srv/data/immich/library:/usr/src/app/upload
     labels:
@@ -37,6 +35,9 @@ services:
     image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:bcf63357191b76a916ae5eb93464d65c07511da41e3bf7a8416db519b40b1c23
     container_name: immich-postgres
     restart: unless-stopped
+    mem_limit: 4g
+    mem_reservation: 512m
+    cpus: 1.5
     environment:
       POSTGRES_DB: immich
       POSTGRES_USER: immich
@@ -55,11 +56,9 @@ services:
 
   immich-microservices:
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION}
-    deploy:
-      resources:
-        limits:
-          memory: 4g
-          cpus: 4
+    mem_limit: 4g
+    mem_reservation: 2g
+    cpus: 2.0
     container_name: immich_microservices
     restart: unless-stopped
     env_file:
@@ -78,11 +77,9 @@ services:
 
   immich-machine-learning:
     image: ghcr.io/immich-app/immich-machine-learning:${IMMICH_VERSION}
-    deploy:
-      resources:
-        limits:
-          memory: 4g
-          cpus: 4
+    mem_limit: 4g
+    mem_reservation: 2g
+    cpus: 2.0
     container_name: immich_ml
     restart: unless-stopped
     networks:
@@ -92,6 +89,9 @@ services:
     image: redis:7
     container_name: immich-redis
     restart: unless-stopped
+    mem_limit: 512m
+    mem_reservation: 128m
+    cpus: 0.5
     networks:
       - immich-net
 
